fix some header sizes and spacing

--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -141,10 +141,6 @@ h1, h2, h5, p {
     padding-bottom:0;
 }
 
-.card-secondary-text {
-    padding-top: 0;
-}
-
 .profile-pic {
     width: 100%;
 }
